force-app/main/default/objects/FinServ__FinancialAccount__c/fields/Amount_Due__c.field-meta.xml
<CustomField>
    <fullName>Amount_Due__c</fullName>
    <label>Amount Due</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>