force-app/main/default/objects/FinServ__FinancialAccount__c/fields/AutoBill__c.field-meta.xml
<CustomField>
    <fullName>AutoBill__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AutoBill</label>
    <type>Checkbox</type>
</CustomField>