force-app/main/default/objects/FinServ__FinancialAccount__c/fields/CC__c.field-meta.xml
<CustomField>
    <fullName>CC__c</fullName>
    <label>CC#</label>
    <length>255</length>
    <type>Text</type>
</CustomField>