force-app/main/default/objects/FinServ__FinancialAccount__c/fields/Exp__c.field-meta.xml
<CustomField>
    <fullName>Exp__c</fullName>
    <label>Exp</label>
    <length>10</length>
    <type>Text</type>
</CustomField>