force-app/main/default/objects/FinServ__FinancialAccount__c/fields/Membership_Number__c.field-meta.xml
<CustomField>
    <fullName>Membership_Number__c</fullName>
    <label>Membership Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>