force-app/main/default/objects/FinServ__FinancialAccount__c/fields/Membership_Type__c.field-meta.xml
<CustomField>
    <fullName>Membership_Type__c</fullName>
    <label>Membership Type</label>
    <length>30</length>
    <type>Text</type>
</CustomField>