force-app/main/default/objects/FinServ__FinancialAccount__c/fields/Pay_Status__c.field-meta.xml
<CustomField>
    <fullName>Pay_Status__c</fullName>
    <label>Pay Status</label>
    <length>30</length>
    <type>Text</type>
</CustomField>