force-app/main/default/objects/FinServ__FinancialAccount__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Card Type</label>
    <length>30</length>
    <type>Text</type>
</CustomField>