force-app/main/default/objects/FinServ__FinancialAccount__c/recordTypes/Membership.recordType-meta.xml
<RecordType>
    <fullName>Membership</fullName>
    <active>true</active>
    <description>Holds the membership financial accounts</description>
    <label>Membership</label>
</RecordType>